# build-llm-from-scratch

./: Cargo.toml  README.md
.github/workflows/: rust.yml
chap2-working-with-text-data/: Cargo.toml
chap2-working-with-text-data/benches/: forloop.rs
chap2-working-with-text-data/src/: data_loader.rs  main.rs
chap3-coding-attention-mechanism/: Cargo.toml
chap3-coding-attention-mechanism/src/: lib.rs  multi_headed_attention.rs
chap4-implement-a-gpt-model/: Cargo.toml
chap4-implement-a-gpt-model/src/: config.rs  feedforward.rs  gelu.rs  generate.rs  gpt_model.rs  lib.rs  main.rs  normalization.rs  shortcut.rs  transformer.rs
chap5-pretraining-on-unlabelled-data/: Cargo.toml
chap5-pretraining-on-unlabelled-data/src/: data.rs  lib.rs  loss.rs  main.rs  train.rs
