[package]
name = "chap2-working-with-text-data"
version = "0.1.0"
edition = "2024"

[dependencies]
tokenizers = { workspace = true }
candle-core = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "forloop"
harness = false
